added python bindings

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,14 +4,21 @@ cmake_minimum_required(VERSION 3.10)
 project(KalmanFilter3D)
 
 # Set the C++ standard
-set(CMAKE_CXX_STANDARD 11)
+set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 
-# Add the source files
-add_executable(KalmanFilter3D
-    main.cpp
-    src/KalmanFilter3D.cpp
-)
+# Add the pybind11 pybind11 module
+set(PYBIND11_FINDPYTHON ON)
+find_package(pybind11 CONFIG REQUIRED)
+
+# Define the source and header files
+file(GLOB SRC_FILES "src/*.cpp")
+
+# Initialize the library
+pybind11_add_module(${PROJECT_NAME} ${SRC_FILES})
 
 # Include the header files
-target_include_directories(KalmanFilter3D PRIVATE "${PROJECT_SOURCE_DIR}/src")
+target_include_directories(${PROJECT_NAME} PRIVATE "${PROJECT_SOURCE_DIR}/src")
+
+# Create the python module
+install(TARGETS ${PROJECT_NAME} DESTINATION .)
